# pico2-wasmtime

./: .gitignore  Cargo.toml  README.md  build.sh  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 543a30ljlya7gq3k5zk6qrxb45a8b1y7-source  ilk3fl55zanydiz08vidxca9qs1bvqxi-source  qls98w9h6hqhi3d16yfg5k4pdljrxb4n-source
compiler/: Cargo.toml
compiler/src/: main.rs
guest/: Cargo.toml  guest.component.wasm
guest/src/: lib.rs
guest/wit/: pico.wit  world.wit
led/: Cargo.toml  smoke.pulley  wasmtime.toml
led/.cargo/: config.toml
led/src/: guest.component.wasm  guest.pulley  main.rs  smoke.cwasm  smoke.pulley  smoke.pulley2
pico2-quick/src/: blinky_lib.rs  guest.pulley  main.rs
wit/: blinky.wit
