[package]
name = "led"
version = "0.2.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "0.3" 
defmt-rtt = "0.4"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = ["time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
static_cell = "2.1" 

# --- ADD THIS TO FIX "can't find crate for test" ---
[profile.dev]
panic = "abort"
debug = 2

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
